--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "bootstrap": "^4.0.0",
     "core-js": "^2.5.4",
     "firebase": "^6.2.4",
-    "rxjs": "~6.2.0",
+    "ng-pick-datetime": "^7.0.0",
+    "rxjs": "~6.5.2",
+    "twilio": "^3.33.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
